# Apy

./: alembic.ini  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
app/: main.py
app/api/: ItemRouter.py
app/core/: database.py  deps.py
app/models/: item.py
app/services/: items_db.py
app/services/ItemsService/: InMemoryItemsService.py  ItemsService.py
doc/: 02_basic_endpoints.md  03_database.md  full_plan.md
migrations/: env.py
migrations/versions/: 7c442f5b9b7c_create_items_table.py
tests/: test_items.py
